Electron Beam Animation (1/2 Frameworks)
Change-Id: Ia6e67983008eca505cead7cd4cb196627f5e2f77

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -790,4 +790,10 @@
     <!-- Asus dock compatibility disabled by default -->
     <bool name="config_hasDockBattery">false</bool>
 
+    <!-- Values greater or equal to 0 will enable electronbeam screen-on
+         animation with the specified delay (in milliseconds), -1 will disable the animation -->
+    <integer name="config_screenOnAnimation">-1</integer>
+
+    <!-- True will enable the electron beam screen-off animation. -->
+    <bool name="config_screenOffAnimation">true</bool>
 </resources>
