--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -768,4 +768,7 @@
     <!-- Workaround for devices with broken keyboards -->
     <bool name="config_forceDisableHardwareKeyboard">false</bool>
 
+    <!-- Asus dock compatibility disabled by default -->
+    <bool name="config_batteryHasAsusDock">false</bool>
+
 </resources>
