Rename "Pulse notification light" for devices that do not blink their LED. (1/2)
Change-Id: Id1e646d96d08c52445b2e29d509abef525695eeb

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -444,6 +444,10 @@
     <!-- Is the notification LED intrusive? Used to decide if there should be a disable option -->
     <bool name="config_intrusiveNotificationLed">false</bool>
 
+    <!-- Is the notification LED able to blink? Used to rename preference option for devices
+         that do not blink their notification LED.  -->
+    <bool name="config_notificationLedCanBlink">true</bool>
+
     <!-- Is the battery LED intrusive? Used to decide if there should be a disable option -->
     <bool name="config_intrusiveBatteryLed">false</bool>
 
