Dispatch keys to a device specific key handler
Injects a device key handler into the input path to handle additional
keys (as found on some docks with a hardware keyboard).

Configurable via overlay settings config_deviceKeyHandlerLib and
config_deviceKeyHandlerClass.

Change-Id: Iec99d52f4a665e59cd13939af62f9b5b3becd375

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -793,4 +793,10 @@
     <!-- If true, Device uses Samsung CDMA Signal Strength fix for displaying signal bars -->
     <bool name="config_SamsungCDMASignalStrength">false</bool>
 
+    <!-- Path to the library that contains the device specifiy key handler -->
+    <string name="config_deviceKeyHandlerLib"></string>
+
+    <!-- Name of that key handler class -->
+    <string name="config_deviceKeyHandlerClass"></string>
+
 </resources>
