--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -784,4 +784,9 @@
     <!-- Asus dock compatibility disabled by default -->
     <bool name="config_hasDockBattery">false</bool>
 
+    <!-- Path to the library that contains the device key handler -->
+    <string name="config_deviceKeyHandlerLib"></string>
+
+    <!-- Name of the device key handler -->
+    <string name="config_deviceKeyHandlerClass"></string>
 </resources>
