--- a/packages/SystemUI/res/layout-sw600dp/status_bar_notification_panel_title.xml
+++ b/packages/SystemUI/res/layout-sw600dp/status_bar_notification_panel_title.xml
@@ -130,26 +130,39 @@
                 />
 
             <ImageView
-                android:id="@+id/battery"
+                android:id="@+id/dock_battery"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:scaleType="centerInside"
-                android:layout_gravity="center_vertical"
+                android:layout_gravity="left|center_vertical"
                 android:layout_alignBaseline="@id/wifi_signal"
                 android:paddingRight="6dp"
                 android:contentDescription="@null"
                 />
 
-            <TextView
-                android:id="@+id/battery_text"
-                style="@style/StatusBarNotificationText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left|center_vertical"
-                android:paddingRight="2dp"
-                android:singleLine="true"
-                android:text="@string/status_bar_settings_settings_button"
-                />
+            <LinearLayout>
+                <ImageView
+                    android:id="@+id/battery"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:scaleType="centerInside"
+                    android:layout_gravity="left|center_vertical"
+                    android:layout_alignBaseline="@id/wifi_signal"
+                    android:paddingRight="6dp"
+                    android:contentDescription="@null"
+                    />
+
+                <TextView
+                    android:id="@+id/battery_text"
+                    style="@style/StatusBarNotificationText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left|center_vertical"
+                    android:paddingRight="2dp"
+                    android:singleLine="true"
+                    android:text="@string/status_bar_settings_settings_button"
+                    />
+            </LinearLayout>
 
             <!-- this will stretch to eat up available space -->
             <View
