Notification light(LED) settings: package mapping (WIP)
This commit allows for framework side override of the application
package name set for Notification light led overrides.  This is used
in cases where the user selectable application sends its notifications
via another package.

Specifically:  GTalk (com.google.android.talk) sends notifications via the
Google services framework (com.google.android.gsf).

Patch set 2  - fix derp and whitespace cleanup

Change-Id: I0c13ae3acefa0bcb4ffb46ea7eae301081d9f8f6

--- a/core/res/res/values/arrays.xml
+++ b/core/res/res/values/arrays.xml
@@ -526,4 +526,11 @@
         <item>bootloader</item>
     </string-array>
 
+    <!-- Do not translate. Defines the mapping of notificatiuon package names
+         from the user selectable package to the actual triggering package.
+         E.g. GTalk uses google services framework -->
+    <string-array name="notification_light_package_mapping" translatable="false">
+        <item>com.google.android.talk|com.google.android.gsf</item>
+    </string-array>
+
 </resources>
