Fix to display signal strength correctly for some Samsung CDMA devices
Change-Id: I6fdf6c4a3707635a8c3e143e54914192c0497709

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -706,7 +706,9 @@
 
     <!-- Set to true if the RSSI should always display CDMA signal strength even on EVDO -->
     <bool name="config_alwaysUseCdmaRssi">false</bool>
-
+    
+    <!-- If true, Device uses Samsung CDMA Signal Strength fix for displaying signal bars -->
+    <bool name="config_SamsungCDMASignalStrength">false</bool>
 
     <!-- If this value is true, duplicate Source/Destination port fields
          in WDP header of some carriers OMADM wap push are supported.
