drawable: added dark holo background image with correct gradient
Change-Id: Ife59a9892ba4619cd2017e0345de234bfe0bd444

--- a/core/res/res/values/themes_device_defaults.xml
+++ b/core/res/res/values/themes_device_defaults.xml
@@ -82,6 +82,7 @@ easier.
         <item name="listSeparatorTextViewStyle">@android:style/Widget.DeviceDefault.TextView.ListSeparator</item>
 
         <!-- Window attributes -->
+        <item name="windowBackground">@android:drawable/cm_screen_background_selector_dark</item>
         <item name="windowTitleStyle">@android:style/WindowTitle.DeviceDefault</item>
         <item name="windowTitleBackgroundStyle">@android:style/WindowTitleBackground.DeviceDefault</item>
         <item name="android:windowAnimationStyle">@android:style/Animation.DeviceDefault.Activity</item>
