--- a/core/res/res/values/attrs.xml
+++ b/core/res/res/values/attrs.xml
@@ -5438,6 +5438,8 @@
         <attr name="mountPoint" format="string" />
         <!-- user visible description of the storage -->
         <attr name="storageDescription" format="string" />
+        <!-- short label description of the volume -->
+        <attr name="storageLabel" format="string" />
         <!-- true if the storage is the primary external storage -->
         <attr name="primary" format="boolean" />
         <!-- true if the storage is removable -->
