Storage: Added short label (1/6) [framework]
Added short label to StorageVolume, so it can be used
in some case, like in Camera, where description is too
long and translated name is not visible completely.

INTSD -> Internal SD
EXTSD -> External SD
USB -> Usb storage

Change-Id: I12b89e391a64de59676eb31c018e337cf41db6f6

--- a/core/res/res/xml/storage_list.xml
+++ b/core/res/res/xml/storage_list.xml
@@ -35,6 +35,7 @@
 <StorageList xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- removable is not set in nosdcard product -->
     <storage android:mountPoint="/mnt/sdcard"
-    		 android:storageDescription="@string/storage_usb"
-    		 android:primary="true" />
+            android:storageDescription="@string/storage_usb"
+            android:storageLabel="USB"
+            android:primary="true" />
 </StorageList>
