--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -639,4 +639,7 @@
 
     <!-- Location of the Authentec framework jar -->
     <string name="config_authentecJarLocation"></string>
+
+    <!-- True if the Sym key should open the InputMethodPicker -->
+    <bool name="sym_key_shows_IME_picker">true</bool>
 </resources>
