Prevent Sym key from showing the IME picker
By default InputMethodManager will popup an IME picker when pressing
the Sym key.

This can be disabled by setting sym_key_shows_IME_picker to false in the
overlay (so the Sym key will show the symbol windows selector for ex.)

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -790,4 +790,9 @@
     <!-- Asus dock compatibility disabled by default -->
     <bool name="config_hasDockBattery">false</bool>
 
+    <!-- Location of the Authentec framework jar -->
+    <string name="config_authentecJarLocation"></string>
+
+    <!-- True if the Sym key should open the InputMethodPicker -->
+    <bool name="sym_key_shows_IME_picker">true</bool>
 </resources>
